addde vercel.json

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # Production environment settings
-MONGODB_URI=mongodb+srv://your_username:your_password@your_cluster.mongodb.net/
-MONGODB_DB=email_tracker_prod_db
-MONGODB_COLLECTION=emails
+MONGODB_URI='mongodb+srv://admin:admin1234junu@cluster0.ucvzx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+MONGODB_DB=real-data
+MONGODB_COLLECTION=email-tracker
 ENVIRONMENT=production 
